--- a/tekton-pipeline-rolebinding.yaml
+++ b/tekton-pipeline-rolebinding.yaml
@@ -2,11 +2,12 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   name: build-and-deploy-run
+  namespace: default
 spec:
-  pipelineRef:
-    name: build-and-deploy-api  # Nombre del pipeline que deseas ejecutar
   serviceAccountName: tekton-pipeline-sa
+  pipelineRef:
+    name: build-and-deploy-api
   workspaces:
     - name: source
       persistentVolumeClaim:
-        claimName: pipeline-pvc  # Debe coincidir con el claimName del PVC para el código fuente
+        claimName: pipeline-pvc
