--- a/build-docker-image-task.yaml
+++ b/build-docker-image-task.yaml
@@ -3,12 +3,30 @@ kind: Task
 metadata:
   name: build-docker-image
 spec:
+  workspaces:
+    - name: source
   params:
     - name: IMAGE
       type: string
   steps:
-    - name: build
-      image: docker:latest
+    - name: build-and-push
+      image: gcr.io/kaniko-project/executor:latest
       script: |
         #!/bin/sh
-        docker build -t $(params.IMAGE) .
+        set -ex
+        /kaniko/executor --context=/workspace/source \
+          --dockerfile=/workspace/source/Dockerfile \
+          --destination=$(params.IMAGE) \
+          --cache=true \
+          --skip-tls-verify
+      env:
+        - name: DOCKER_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: docker-registry-secret
+              key: username
+        - name: DOCKER_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: docker-registry-secret
+              key: password
